<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/loginCard"
    app:cardCornerRadius="@dimen/loginCardRadius"
    android:elevation="5dp"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/black">

    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin"
        android:background="@color/black"
        >

        <TextView
            style="@style/headerTextPrimary"
            android:text="@string/register"
            android:layout_marginTop="@dimen/loginViewsMargin"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">
            <EditText
                android:id="@+id/editTextRegPhone"
                style="@style/modifiedEditText"
                android:inputType="phone"
                android:maxLines="1"
                android:hint="@string/phone_number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">
            <EditText
                android:id="@+id/editTextRegEmail"
                style="@style/modifiedEditText"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:hint="@string/login_email_hint"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">
            <EditText
                android:id="@+id/editTextRegName"
                style="@style/modifiedEditText"
                android:inputType="text"
                android:maxLines="1"
                android:hint="Display Name"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">
            <EditText
                android:id="@+id/editTextRegPassword"
                style="@style/modifiedEditText"
                android:hint="@string/login_password_hint"
                android:maxLines="1"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">
            <EditText
                android:id="@+id/editTextRegConfPassword"
                style="@style/modifiedEditText"
                android:hint="@string/confirm_password"
                android:maxLines="1"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            style="@style/parent"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/logo_red"
            android:text="@string/date_of_birth"
            android:layout_marginTop="@dimen/loginViewsMargin"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/labelDob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="DATE HERE"
                android:textColor="@color/logo_red"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/btnChangeDob"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <Button
                android:id="@+id/btnChangeDob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/change"
                android:textColor="@color/logo_red"
                app:layout_constraintLeft_toRightOf="@+id/labelDob"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            style="@style/parent"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/logo_red"
            android:text="@string/gender"
            android:layout_marginTop="@dimen/loginViewsMargin"/>


        <RadioGroup
            android:id="@+id/radioGroupRegGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            >
            <RadioButton
                android:id="@+id/radioBtnMale"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:text="@string/male"
                android:textSize="11sp"
                android:textColor="@color/logo_red"
                android:layout_marginLeft="15dp"
                />
            <RadioButton
                android:id="@+id/radioBtnFemale"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:text="@string/female"
                android:textSize="11sp"
                android:textColor="@color/logo_red"
                android:layout_marginLeft="20dp"
                />
            <RadioButton
                android:id="@+id/radioBtnUnspecified"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:text="@string/unspecified"
                android:textSize="11sp"
                android:textColor="@color/logo_red"
                android:layout_marginLeft="20dp"
                />

        </RadioGroup>

        <TextView
            android:id="@+id/registerGoToLoginText"
            style="@style/parent"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/logo_red"
            android:text="@string/signup_login_hint"
            android:layout_marginTop="@dimen/loginViewsMargin"/>

        <Button
            android:id="@+id/cirRegisterButton"
            style="@style/loginButton"
            android:layout_gravity="center"
            android:text="@string/register2"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:layout_width="match_parent"
            />

    </LinearLayout>

</androidx.cardview.widget.CardView>