<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FestWalletActivity"
    android:orientation="vertical"
    >

  <LinearLayout
      android:id="@+id/balanceIndicatorLayout"
      android:layout_width="match_parent"
      android:layout_height="225dp"
      android:layout_weight="0"
      android:background="@drawable/fwallet_background"
      android:orientation="vertical"
      tools:layout_editor_absoluteX="-1dp"
      tools:layout_editor_absoluteY="-3dp">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
      android:orientation="horizontal">
      <TextView
          android:id="@+id/currencyText"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="90dp"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:text="IDR"/>
      <TextView
          android:id="@+id/balanceText"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="20dp"
          android:layout_marginTop="90dp"
          android:text="175540.00"
          android:textStyle="bold"
          android:textColor="@color/white"
          android:textSize="36sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="35dp"
        android:background="@color/black_trans"
        >
      <TextView
          android:id="@+id/currencyFullName"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="15sp"
          android:textColor="@color/leku_soft_gray"

          android:layout_marginLeft="120dp"
          android:text="Indonesian Rupiah (IDR)"/>
      <Button
          android:id="@+id/changeCurrencyBtn"
          android:layout_width="wrap_content"
          android:layout_height="40dp"
          android:backgroundTint="@color/black_b3"
          android:textSize="9sp"
          android:layout_marginLeft="15dp"
          android:text="@string/change" />
    </LinearLayout>



  </LinearLayout>
  <LinearLayout
      app:layout_constraintTop_toBottomOf="@id/balanceIndicatorLayout"
      android:layout_width="match_parent"
      android:layout_height="400dp"
      android:layout_weight="1"
      android:orientation="vertical"
    android:background="@color/darkerwhite">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/transactions"
        android:background="@color/logo_red_99"
        android:textColor="@color/black_b2"
        android:textStyle="bold"
        android:textSize="20sp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
      android:orientation="horizontal">
      <TextView
          android:id="@+id/tvToggleInbound"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:text="@string/inbound"
          android:background="@color/logo_red_66"
          android:textColor="@color/black_b2"
          android:textStyle="bold"
          android:textSize="12sp"
          android:paddingTop="5dp"
          android:paddingBottom="5dp"
          android:layout_weight="1"
          />
      <TextView
          android:id="@+id/tvToggleOutbound"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:text="@string/outbound"
          android:background="@color/logo_red_66"
          android:textColor="@color/black_b2"
          android:textStyle="bold"
          android:textSize="12sp"
          android:paddingTop="5dp"
          android:paddingBottom="5dp"
          android:layout_weight="1"
          />
    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
      <LinearLayout
          android:id="@+id/transactionListHolder"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:gravity="center_horizontal"
          android:paddingTop="10dp"
          android:paddingLeft="10dp"
          android:paddingRight="10dp"
          android:paddingBottom="10dp"
          >
      </LinearLayout>
    </ScrollView>

  </LinearLayout>

  <View
      android:id="@+id/divider2"
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:layout_weight="0"
      android:background="?android:attr/listDivider" />

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="90dp"
      android:layout_weight="0">
    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="90dp"
        android:layout_height="57dp"
        app:srcCompat="@drawable/ic_fwallet_full"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="25dp"
        android:layout_height="21dp"
        app:srcCompat="@drawable/ic_baseline_payment_24"
        app:layout_constraintTop_toBottomOf="@id/walletHolderName"
        app:layout_constraintLeft_toLeftOf="@id/walletHolderName"
        android:layout_marginRight="15dp"
        />

    <TextView
        android:id="@+id/censoredWalletNumber"
        android:layout_width="138dp"
        android:layout_height="wrap_content"
        android:text="**** **** **** 2234"
        app:layout_constraintTop_toBottomOf="@id/walletHolderName"
        app:layout_constraintLeft_toRightOf="@id/imageView"
        android:layout_marginLeft="10dp"
        />

    <TextView
        android:id="@+id/walletHolderName"
        android:layout_width="278dp"
        android:layout_height="wrap_content"
        android:text="Jason Adiwijaya"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/imageView5"
        app:layout_constraintLeft_toRightOf="@id/imageView5"
        android:layout_marginLeft="40dp" />

    <Button
        android:id="@+id/buttonShowFullNumber"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/logo_red"
        android:drawableEnd="@drawable/ic_baseline_show_24"
        android:drawableTint="@color/white"
        android:text="SHOW"
        android:textSize="10sp"
        app:layout_constraintTop_toTopOf="@id/censoredWalletNumber"
        app:layout_constraintLeft_toRightOf="@id/censoredWalletNumber"/>

  </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>