<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">
    <LinearLayout
        android:id="@+id/organizerToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        >
        <TextView
            android:id="@+id/textOrganizerStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Organizer | User"
            android:textStyle="bold"
            android:textSize="13sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
        <TextView
            android:id="@+id/textOrganizerClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Go to dashboard | Become an organizer"
            android:textSize="11sp"
            android:textStyle="italic"
            android:textColor="@color/purple_200"
            android:drawableRight="@drawable/ic_baseline_keyboard_arrow_right_12"
            app:layout_constraintTop_toBottomOf="@id/textOrganizerStatus"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    </LinearLayout>


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profileImgDetail"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="50dp"
        tools:srcCompat="@tools:sample/avatars"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
        />

    <LinearLayout
        android:id="@+id/layoutDisplayName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/profileImgDetail"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:text="@string/john_doe"
            android:textSize="23sp"
            android:textStyle="bold"
            android:textColor="@color/cardview_dark_background"
            />

        <!-- <ImageView
            android:id="@+id/imageViewEditNameIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_edit_18"
            android:layout_marginLeft="10dp"/> -->

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/layoutDisplayName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >
        <TextView
            android:id="@+id/textEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/johndoe_example_com"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/layoutEmail"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Phone Number"
            android:textStyle="italic"
            android:gravity="left"
            android:textSize="12sp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp" />
        <TextView
            android:id="@+id/userPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="08124271475"
            android:textStyle="bold"
            android:gravity="left"
            android:textSize="16sp"
            android:layout_marginLeft="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Gender"
            android:textStyle="italic"
            android:gravity="left"
            android:textSize="12sp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp" />
        <TextView
            android:id="@+id/userGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Male"
            android:textStyle="bold"
            android:gravity="left"
            android:textSize="16sp"
            android:layout_marginLeft="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Date of Birth"
            android:textStyle="italic"
            android:gravity="left"
            android:textSize="12sp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp" />
        <TextView
            android:id="@+id/userDOB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="2003/03/07"
            android:textStyle="bold"
            android:gravity="left"
            android:textSize="16sp"
            android:layout_marginLeft="20dp" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_margin="5dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Preferences"
            android:textAlignment="center"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="2dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:gravity="right"
            android:layout_marginRight="25dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="Max Events Distance"
                android:layout_marginRight="30dp"
                android:textSize="15sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
            <TextView
                android:id="@+id/setting_MaxRangeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="10 KM"
                android:layout_marginRight="10dp"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
            <Button
                android:id="@+id/setting_MaxRangeChange"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:backgroundTint="@color/black_b3"
                android:textSize="10sp"
                android:text="Change"
                />

        </LinearLayout>
        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="2dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:gravity="right"
            android:layout_marginRight="25dp"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="Time Zone"
                android:layout_marginRight="30dp"
                android:textSize="15sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
            <TextView
                android:id="@+id/setting_TimeZoneText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="GMT+7"
                android:layout_marginRight="10dp"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
            <Button
                android:id="@+id/setting_TimeZoneChange"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:backgroundTint="@color/black_b3"
                android:textSize="10sp"
                android:text="Change"
                />

        </LinearLayout>
        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="2dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:gravity="right"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            >
            <Button
                android:id="@+id/setting_changePw"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:backgroundTint="@color/black_b3"
                android:textSize="10sp"
                android:text="Change Password"
                />

        </LinearLayout>
        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="2dp"
            />


    </LinearLayout>




    <Button
        android:id="@+id/buttonLogOut"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/logo_teal"
        android:text="@string/sign_out"
        app:icon="@drawable/ic_baseline_exit_to_app_24"
        app:iconTint="@color/logo_red"
        android:textColor="@color/logo_red"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/walletMiniFragmentFl"
        android:name="com.jxsr.festwithin.FestWalletMiniFragment"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginBottom="27dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogOut"
        tools:layout_editor_absoluteX="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>